--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,13 @@
 **/node_modules/
 
 # Excluding files from project
-**/dist/
+**/.dist/
+**/.dist_ui/
 
 # package lock file
 **/package-lock.json
+""/yarn.lock
 
 #Ignore VS File
 /.vs/
+/.vscode/
