--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "group-css-media-queries-loader": "^3.0.2",
     "html-replace-webpack-plugin": "^2.5.6",
     "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "nodemon": "^2.0.2",
